[gd_scene load_steps=27 format=2]

[ext_resource path="res://New Piskel-1.png.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://flashlight.png" type="Texture" id=3]
[ext_resource path="res://wall.tres" type="TileSet" id=4]
[ext_resource path="res://Monster.tscn" type="PackedScene" id=5]
[ext_resource path="res://light.png" type="Texture" id=6]
[ext_resource path="res://light2.png" type="Texture" id=7]
[ext_resource path="res://light3.png" type="Texture" id=8]
[ext_resource path="res://light4.png" type="Texture" id=9]
[ext_resource path="res://ambience.wav" type="AudioStream" id=10]
[ext_resource path="res://Ambience.gd" type="Script" id=11]
[ext_resource path="res://Gate.tscn" type="PackedScene" id=12]
[ext_resource path="res://Key.tscn" type="PackedScene" id=13]
[ext_resource path="res://Gate.gd" type="Script" id=14]
[ext_resource path="res://Baybie.tscn" type="PackedScene" id=15]
[ext_resource path="res://kill.wav" type="AudioStream" id=16]
[ext_resource path="res://keys.png" type="Texture" id=17]
[ext_resource path="res://bang.wav" type="AudioStream" id=18]
[ext_resource path="res://jingle.wav" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 4
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 4
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=6]
flags = 4
frames = 7
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 9 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 8 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 9 )
frame_6/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=7]
flags = 4
frames = 4
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 444, 100, 17.4614, -12.6992, -17.4614, 12.6992, 437, 368, 0, 0, 0, 0, 102, 388, -6.3496, -23.811, 6.3496, 23.811, 439, 408, 14.2866, -20.6362, -14.2866, 20.6362, 437, 727, 0, 0, 0, 0, 99, 750, -17.4614, -19.0488, 17.4614, 19.0488, 433, 755, 0, 0, 0, 0, 450, 1000, -7.937, 19.0488, 7.937, -19.0488, 456, 757, -14.2866, -19.0488, 14.2866, 19.0488, 855, 758, 0, 0, 0, 0, 872, 996, -12.6992, 25.3984, 12.6992, -25.3984, 885, 754, 0, 0, 0, 0, 1263, 746, 15.874, 20.6362, -15.874, -20.6362, 885, 727, -17.4614, 20.6362, 17.4614, -20.6362, 885, 409, 0, 0, 0, 0, 1266, 392, 7.937, 20.6362, -7.937, -20.6362, 891, 369, 0, 0, 0, 0, 874, 82, 25.3984, -19.0488, -25.3984, 19.0488, 858, 368, 15.874, 36.5102, -15.874, -36.5102, 471, 368, 0, 0, 0, 0, 445, 100, 0, 0, 0, 0, 444, 100 )
}

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 562, 261 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
show_behind_parent = true
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true

[node name="Flashlight" type="Light2D" parent="Player"]
position = Vector2( 0, 4.88758e-06 )
scale = Vector2( 0.759998, 0.68 )
texture = ExtResource( 3 )
offset = Vector2( 140.79, 1.47058 )
shadow_enabled = true

[node name="KillSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 16 )

[node name="Timer" type="Timer" parent="Player"]

[node name="Bang" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 18 )

[node name="KeyJingle" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 19 )
volume_db = 11.283

[node name="Floor" type="Sprite" parent="."]
modulate = Color( 0.34902, 0.262745, 0.262745, 1 )
position = Vector2( 972.5, 639 )
scale = Vector2( 250.937, 134.75 )
texture = ExtResource( 1 )

[node name="Walls" type="TileMap" parent="." groups=["environment"]]
z_index = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -982989, 0, 0, -982988, 0, 0, -982987, 0, 0, -982986, 0, 0, -982985, 0, 0, -982984, 0, 0, -982983, 0, 0, -917453, 0, 0, -917447, 0, 0, -851917, 0, 0, -851911, 0, 0, -786381, 0, 0, -786375, 0, 0, -720845, 0, 0, -720839, 0, 0, -655309, 0, 0, -655303, 0, 0, -589773, 0, 0, -589767, 0, 0, -524237, 0, 0, -524231, 0, 0, -458701, 0, 0, -458695, 0, 0, -393165, 0, 0, -393159, 0, 0, -327629, 0, 0, -327623, 0, 0, -262093, 0, 0, -262087, 0, 0, -196557, 0, 0, -196551, 0, 0, -131021, 0, 0, -131015, 0, 0, -65485, 0, 0, -65479, 0, 0, 51, 0, 0, 57, 0, 0, 65587, 0, 0, 65593, 0, 0, 131123, 0, 0, 131129, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 0, 0, 196679, 0, 0, 196680, 0, 0, 196681, 0, 0, 196682, 0, 0, 196683, 0, 0, 196684, 0, 0, 196685, 0, 0, 196686, 0, 0, 196687, 0, 0, 196688, 0, 0, 196689, 0, 0, 262148, 0, 0, 262168, 0, 0, 262175, 0, 0, 262195, 0, 0, 262201, 0, 0, 262221, 0, 0, 262225, 0, 0, 327684, 0, 0, 327704, 0, 0, 327711, 0, 0, 327731, 0, 0, 327737, 0, 0, 327757, 0, 0, 327761, 0, 0, 393220, 0, 0, 393240, 0, 0, 393247, 0, 0, 393267, 0, 0, 393273, 0, 0, 393293, 0, 0, 393297, 0, 0, 458756, 0, 0, 458776, 0, 0, 458783, 0, 0, 458803, 0, 0, 458809, 0, 0, 458829, 0, 0, 458833, 0, 0, 524292, 0, 0, 524312, 0, 0, 524319, 0, 0, 524339, 0, 0, 524345, 0, 0, 524365, 0, 0, 524369, 0, 0, 589828, 0, 0, 589848, 0, 0, 589855, 0, 0, 589875, 0, 0, 589881, 0, 0, 589901, 0, 0, 589905, 0, 0, 655364, 0, 0, 655384, 0, 0, 655391, 0, 0, 655411, 0, 0, 655417, 0, 0, 655441, 0, 0, 720900, 0, 0, 720920, 0, 0, 720927, 0, 0, 720947, 0, 0, 720953, 0, 0, 720977, 0, 0, 786436, 0, 0, 786456, 0, 0, 786463, 0, 0, 786483, 0, 0, 786489, 0, 0, 786513, 0, 0, 851972, 0, 0, 851992, 0, 0, 851999, 0, 0, 852019, 0, 0, 852025, 0, 0, 852045, 0, 0, 852049, 0, 0, 917508, 0, 0, 917528, 0, 0, 917535, 0, 0, 917555, 0, 0, 917561, 0, 0, 917581, 0, 0, 917585, 0, 0, 983044, 0, 0, 983064, 0, 0, 983071, 0, 0, 983091, 0, 0, 983097, 0, 0, 983117, 0, 0, 983121, 0, 0, 1048580, 0, 0, 1048600, 0, 0, 1048607, 0, 0, 1048627, 0, 0, 1048633, 0, 0, 1048653, 0, 0, 1048657, 0, 0, 1114116, 0, 0, 1114136, 0, 0, 1114143, 0, 0, 1114163, 0, 0, 1114169, 0, 0, 1114189, 0, 0, 1114193, 0, 0, 1179652, 0, 0, 1179672, 0, 0, 1179679, 0, 0, 1179699, 0, 0, 1179705, 0, 0, 1179725, 0, 0, 1179729, 0, 0, 1245188, 0, 0, 1245208, 0, 0, 1245215, 0, 0, 1245235, 0, 0, 1245241, 0, 0, 1245261, 0, 0, 1245265, 0, 0, 1310724, 0, 0, 1310744, 0, 0, 1310751, 0, 0, 1310771, 0, 0, 1310777, 0, 0, 1310797, 0, 0, 1310801, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376319, 0, 0, 1376320, 0, 0, 1376321, 0, 0, 1376322, 0, 0, 1376323, 0, 0, 1376324, 0, 0, 1376325, 0, 0, 1376326, 0, 0, 1376327, 0, 0, 1376328, 0, 0, 1376329, 0, 0, 1376330, 0, 0, 1376331, 0, 0, 1376332, 0, 0, 1376333, 0, 0, 1376337, 0, 0, 1441796, 0, 0, 1441873, 0, 0, 1507332, 0, 0, 1507409, 0, 0, 1572868, 0, 0, 1572945, 0, 0, 1638404, 0, 0, 1638481, 0, 0, 1703940, 0, 0, 1704017, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 0, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769487, 0, 0, 1769488, 0, 0, 1769489, 0, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769521, 0, 0, 1769522, 0, 0, 1769523, 0, 0, 1769529, 0, 0, 1769530, 0, 0, 1769531, 0, 0, 1769532, 0, 0, 1769533, 0, 0, 1769534, 0, 0, 1769535, 0, 0, 1769536, 0, 0, 1769537, 0, 0, 1769538, 0, 0, 1769542, 0, 0, 1769543, 0, 0, 1769544, 0, 0, 1769545, 0, 0, 1769546, 0, 0, 1769547, 0, 0, 1769548, 0, 0, 1769549, 0, 0, 1769553, 0, 0, 1835012, 0, 0, 1835032, 0, 0, 1835039, 0, 0, 1835059, 0, 0, 1835065, 0, 0, 1835085, 0, 0, 1835089, 0, 0, 1900548, 0, 0, 1900568, 0, 0, 1900575, 0, 0, 1900595, 0, 0, 1900601, 0, 0, 1900621, 0, 0, 1900625, 0, 0, 1966084, 0, 0, 1966104, 0, 0, 1966111, 0, 0, 1966131, 0, 0, 1966137, 0, 0, 1966157, 0, 0, 1966161, 0, 0, 2031620, 0, 0, 2031640, 0, 0, 2031647, 0, 0, 2031667, 0, 0, 2031673, 0, 0, 2031693, 0, 0, 2031697, 0, 0, 2097156, 0, 0, 2097176, 0, 0, 2097183, 0, 0, 2097203, 0, 0, 2097209, 0, 0, 2097229, 0, 0, 2097233, 0, 0, 2162692, 0, 0, 2162712, 0, 0, 2162719, 0, 0, 2162745, 0, 0, 2162765, 0, 0, 2162769, 0, 0, 2228228, 0, 0, 2228248, 0, 0, 2228255, 0, 0, 2228281, 0, 0, 2228301, 0, 0, 2228305, 0, 0, 2293764, 0, 0, 2293784, 0, 0, 2293791, 0, 0, 2293817, 0, 0, 2293837, 0, 0, 2293841, 0, 0, 2359300, 0, 0, 2359320, 0, 0, 2359327, 0, 0, 2359353, 0, 0, 2359373, 0, 0, 2359377, 0, 0, 2424836, 0, 0, 2424856, 0, 0, 2424863, 0, 0, 2424883, 0, 0, 2424889, 0, 0, 2424909, 0, 0, 2424913, 0, 0, 2490372, 0, 0, 2490392, 0, 0, 2490399, 0, 0, 2490419, 0, 0, 2490425, 0, 0, 2490445, 0, 0, 2490449, 0, 0, 2555908, 0, 0, 2555928, 0, 0, 2555935, 0, 0, 2555955, 0, 0, 2555961, 0, 0, 2555981, 0, 0, 2555985, 0, 0, 2621444, 0, 0, 2621464, 0, 0, 2621471, 0, 0, 2621491, 0, 0, 2621497, 0, 0, 2621517, 0, 0, 2621521, 0, 0, 2686980, 0, 0, 2687000, 0, 0, 2687007, 0, 0, 2687027, 0, 0, 2687033, 0, 0, 2687053, 0, 0, 2687057, 0, 0, 2752516, 0, 0, 2752536, 0, 0, 2752543, 0, 0, 2752563, 0, 0, 2752569, 0, 0, 2752589, 0, 0, 2752593, 0, 0, 2818052, 0, 0, 2818053, 0, 0, 2818054, 0, 0, 2818055, 0, 0, 2818056, 0, 0, 2818057, 0, 0, 2818058, 0, 0, 2818059, 0, 0, 2818060, 0, 0, 2818064, 0, 0, 2818065, 0, 0, 2818066, 0, 0, 2818067, 0, 0, 2818068, 0, 0, 2818069, 0, 0, 2818070, 0, 0, 2818071, 0, 0, 2818072, 0, 0, 2818079, 0, 0, 2818080, 0, 0, 2818081, 0, 0, 2818082, 0, 0, 2818083, 0, 0, 2818084, 0, 0, 2818085, 0, 0, 2818086, 0, 0, 2818087, 0, 0, 2818088, 0, 0, 2818089, 0, 0, 2818090, 0, 0, 2818091, 0, 0, 2818092, 0, 0, 2818093, 0, 0, 2818094, 0, 0, 2818095, 0, 0, 2818096, 0, 0, 2818097, 0, 0, 2818098, 0, 0, 2818099, 0, 0, 2818105, 0, 0, 2818106, 0, 0, 2818107, 0, 0, 2818108, 0, 0, 2818109, 0, 0, 2818110, 0, 0, 2818111, 0, 0, 2818112, 0, 0, 2818113, 0, 0, 2818114, 0, 0, 2818118, 0, 0, 2818119, 0, 0, 2818120, 0, 0, 2818121, 0, 0, 2818122, 0, 0, 2818123, 0, 0, 2818124, 0, 0, 2818125, 0, 0, 2818129, 0, 0, 2883588, 0, 0, 2883665, 0, 0, 2949124, 0, 0, 2949201, 0, 0, 3014660, 0, 0, 3014737, 0, 0, 3080196, 0, 0, 3080273, 0, 0, 3145732, 0, 0, 3145809, 0, 0, 3211268, 0, 0, 3211269, 0, 0, 3211270, 0, 0, 3211271, 0, 0, 3211272, 0, 0, 3211273, 0, 0, 3211274, 0, 0, 3211275, 0, 0, 3211276, 0, 0, 3211280, 0, 0, 3211281, 0, 0, 3211282, 0, 0, 3211283, 0, 0, 3211284, 0, 0, 3211285, 0, 0, 3211286, 0, 0, 3211287, 0, 0, 3211288, 0, 0, 3211295, 0, 0, 3211296, 0, 0, 3211297, 0, 0, 3211298, 0, 0, 3211299, 0, 0, 3211300, 0, 0, 3211301, 0, 0, 3211302, 0, 0, 3211303, 0, 0, 3211304, 0, 0, 3211305, 0, 0, 3211306, 0, 0, 3211310, 0, 0, 3211311, 0, 0, 3211312, 0, 0, 3211313, 0, 0, 3211314, 0, 0, 3211315, 0, 0, 3211321, 0, 0, 3211322, 0, 0, 3211323, 0, 0, 3211324, 0, 0, 3211325, 0, 0, 3211326, 0, 0, 3211327, 0, 0, 3211328, 0, 0, 3211329, 0, 0, 3211330, 0, 0, 3211334, 0, 0, 3211335, 0, 0, 3211336, 0, 0, 3211337, 0, 0, 3211338, 0, 0, 3211339, 0, 0, 3211340, 0, 0, 3211341, 0, 0, 3211345, 0, 0, 3276804, 0, 0, 3276824, 0, 0, 3276831, 0, 0, 3276851, 0, 0, 3276857, 0, 0, 3276877, 0, 0, 3276881, 0, 0, 3342340, 0, 0, 3342360, 0, 0, 3342367, 0, 0, 3342387, 0, 0, 3342393, 0, 0, 3342413, 0, 0, 3342417, 0, 0, 3407876, 0, 0, 3407896, 0, 0, 3407903, 0, 0, 3407923, 0, 0, 3407929, 0, 0, 3407949, 0, 0, 3407953, 0, 0, 3473412, 0, 0, 3473432, 0, 0, 3473439, 0, 0, 3473459, 0, 0, 3473465, 0, 0, 3473485, 0, 0, 3473489, 0, 0, 3538948, 0, 0, 3538968, 0, 0, 3538975, 0, 0, 3538995, 0, 0, 3539001, 0, 0, 3539021, 0, 0, 3539025, 0, 0, 3604484, 0, 0, 3604504, 0, 0, 3604511, 0, 0, 3604531, 0, 0, 3604537, 0, 0, 3604557, 0, 0, 3604561, 0, 0, 3670020, 0, 0, 3670040, 0, 0, 3670047, 0, 0, 3670067, 0, 0, 3670073, 0, 0, 3670093, 0, 0, 3670097, 0, 0, 3735556, 0, 0, 3735576, 0, 0, 3735583, 0, 0, 3735603, 0, 0, 3735609, 0, 0, 3735629, 0, 0, 3735633, 0, 0, 3801092, 0, 0, 3801112, 0, 0, 3801119, 0, 0, 3801139, 0, 0, 3801145, 0, 0, 3801165, 0, 0, 3801169, 0, 0, 3866628, 0, 0, 3866648, 0, 0, 3866655, 0, 0, 3866675, 0, 0, 3866681, 0, 0, 3866701, 0, 0, 3866705, 0, 0, 3932164, 0, 0, 3932184, 0, 0, 3932191, 0, 0, 3932211, 0, 0, 3932217, 0, 0, 3932237, 0, 0, 3932241, 0, 0, 3997700, 0, 0, 3997720, 0, 0, 3997727, 0, 0, 3997747, 0, 0, 3997753, 0, 0, 3997773, 0, 0, 3997777, 0, 0, 4063236, 0, 0, 4063256, 0, 0, 4063263, 0, 0, 4063283, 0, 0, 4063289, 0, 0, 4063309, 0, 0, 4063313, 0, 0, 4128772, 0, 0, 4128792, 0, 0, 4128799, 0, 0, 4128819, 0, 0, 4128825, 0, 0, 4128845, 0, 0, 4128849, 0, 0, 4194308, 0, 0, 4194309, 0, 0, 4194310, 0, 0, 4194311, 0, 0, 4194312, 0, 0, 4194313, 0, 0, 4194314, 0, 0, 4194315, 0, 0, 4194316, 0, 0, 4194317, 0, 0, 4194318, 0, 0, 4194319, 0, 0, 4194320, 0, 0, 4194321, 0, 0, 4194322, 0, 0, 4194323, 0, 0, 4194324, 0, 0, 4194325, 0, 0, 4194326, 0, 0, 4194327, 0, 0, 4194328, 0, 0, 4194329, 0, 0, 4194330, 0, 0, 4194331, 0, 0, 4194332, 0, 0, 4194333, 0, 0, 4194334, 0, 0, 4194335, 0, 0, 4194336, 0, 0, 4194337, 0, 0, 4194338, 0, 0, 4194339, 0, 0, 4194340, 0, 0, 4194341, 0, 0, 4194342, 0, 0, 4194343, 0, 0, 4194344, 0, 0, 4194345, 0, 0, 4194346, 0, 0, 4194347, 0, 0, 4194348, 0, 0, 4194349, 0, 0, 4194350, 0, 0, 4194351, 0, 0, 4194352, 0, 0, 4194353, 0, 0, 4194354, 0, 0, 4194355, 0, 0, 4194356, 0, 0, 4194357, 0, 0, 4194358, 0, 0, 4194359, 0, 0, 4194360, 0, 0, 4194361, 0, 0, 4194362, 0, 0, 4194363, 0, 0, 4194364, 0, 0, 4194365, 0, 0, 4194366, 0, 0, 4194367, 0, 0, 4194368, 0, 0, 4194369, 0, 0, 4194370, 0, 0, 4194371, 0, 0, 4194372, 0, 0, 4194373, 0, 0, 4194374, 0, 0, 4194375, 0, 0, 4194376, 0, 0, 4194377, 0, 0, 4194378, 0, 0, 4194379, 0, 0, 4194380, 0, 0, 4194381, 0, 0, 4194382, 0, 0, 4194383, 0, 0, 4194384, 0, 0, 4194385, 0, 0 )

[node name="Light" type="Light2D" parent="."]
position = Vector2( 276, 358 )
scale = Vector2( 0.26729, 0.275111 )
texture = SubResource( 4 )
offset = Vector2( 31, -1 )
shadow_enabled = true

[node name="Light2" type="Light2D" parent="."]
position = Vector2( 446, 742 )
scale = Vector2( 0.26729, 0.275111 )
texture = SubResource( 4 )
offset = Vector2( 31, -1 )
shadow_enabled = true

[node name="Light3" type="Light2D" parent="."]
position = Vector2( 1045, 803 )
scale = Vector2( 0.26729, 0.275111 )
texture = SubResource( 5 )
offset = Vector2( 31, -1 )
shadow_enabled = true

[node name="Light4" type="Light2D" parent="."]
position = Vector2( 873, 87 )
scale = Vector2( 0.467, 0.475 )
texture = SubResource( 6 )
offset = Vector2( 31, -1 )
shadow_enabled = true

[node name="Light5" type="Light2D" parent="."]
position = Vector2( 872, 644 )
scale = Vector2( 0.26729, 0.275111 )
texture = SubResource( 7 )
offset = Vector2( 31, -1 )
shadow_enabled = true

[node name="Shadow" type="CanvasModulate" parent="."]
position = Vector2( 441, 314 )
color = Color( 0, 0, 0, 1 )

[node name="Gate" parent="." instance=ExtResource( 12 )]
position = Vector2( 872, 56 )
scale = Vector2( 5, 1 )
script = ExtResource( 14 )

[node name="blueKey" parent="." instance=ExtResource( 13 )]
modulate = Color( 0.109804, 0.427451, 0.709804, 1 )
position = Vector2( 183, 189 )

[node name="redKey" parent="." instance=ExtResource( 13 )]
modulate = Color( 0.756863, 0.235294, 0.235294, 1 )
position = Vector2( 590, 643 )

[node name="yellowKey" parent="." instance=ExtResource( 13 )]
modulate = Color( 0.87451, 0.862745, 0.027451, 1 )
position = Vector2( 1018, 166 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 444, 100 )
rotation = 1.53173
scale = Vector2( 0.991362, 0.993694 )

[node name="Monster" parent="Path2D/PathFollow2D" groups=["environment"] instance=ExtResource( 5 )]
z_index = 1

[node name="Baybie" parent="." instance=ExtResource( 15 )]
position = Vector2( 871, -201 )
scale = Vector2( 1.57949, 1.56197 )

[node name="Ambi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
script = ExtResource( 11 )

[node name="Scribbles" type="Sprite" parent="."]
position = Vector2( 874, 97 )
scale = Vector2( 0.297121, 0.357069 )
texture = ExtResource( 17 )

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
